login to mangeSystem must input captcha-code
